--- a/index.html
+++ b/index.html
@@ -1,97 +1,385 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta name="google-site-verification" content="Eq5-64xQ4vvqTXKWhxd85ZfezyjG-15RQ_2VXbMIxR0" />
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Jose-Maria Kimburi</title>
-  <meta name="description" content="Author & Filmmaker">
+  <head>
+    <meta name="google-site-verification" content="Eq5-64xQ4vvqTXKWhxd85ZfezyjG-15RQ_2VXbMIxR0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Jose-Maria Kimburi</title>
+    <meta name="description" content="Author & Filmmaker">
+    <!-- SEO metadata -->
+    <meta name="author" content="Jose-Maria Kimburi">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, Kimburi J, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, BioVerse TV">
+    <link rel="canonical" href="https://j-mk.com/">
+    <link rel="alternate" hreflang="en-GB" href="https://j-mk.com/">
 
-  <!-- SEO metadata -->
-  <meta name="author" content="Jose-Maria Kimburi">
-  <meta name="robots" content="index, follow">
-  <meta name="keywords" content="Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi, Kimburi J, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, BioVerse TV">
-  <link rel="canonical" href="https://j-mk.com/">
-  <link rel="alternate" hreflang="en-GB" href="https://j-mk.com/">
+    <!-- Open Graph / Twitter -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Jose-Maria Kimburi">
+    <meta property="og:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
+    <meta property="og:url" content="https://j-mk.com/">
+    <meta property="og:image" content="https://j-mk.com/Assets/away.jpg">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Jose-Maria Kimburi">
-  <meta property="og:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
-  <meta property="og:url" content="https://j-mk.com/">
-  <meta property="og:image" content="https://j-mk.com/Assets/away.jpg">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Jose-Maria Kimburi">
-  <meta name="twitter:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
-  <meta name="twitter:image" content="https://j-mk.com/Assets/away.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Jose-Maria Kimburi">
+    <meta name="twitter:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
+    <meta name="twitter:image" content="https://j-mk.com/Assets/away.jpg">
 
-  <!-- Favicon -->
-  <link rel="icon" href="/Assets/favicon.png" type="image/png">
+    <!-- Favicon -->
+    <link rel="icon" href="/Assets/favicon.png" type="image/png">
 
-  <!-- Performance hints (root-based) -->
-  <link rel="preload" href="/Assets/away.jpg" as="image">
-  <link rel="preload" href="/Assets/group.jpg" as="image">
-  <link rel="preload" href="/Assets/direct.jpg" as="image">
+    <!-- Performance hints (root-based) -->
+    <link rel="preload" href="/Assets/away.jpg" as="image">
+    <link rel="preload" href="/Assets/group.jpg" as="image">
+    <link rel="preload" href="/Assets/direct.jpg" as="image">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
 
-  <!-- Sitemap hint -->
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+    <!-- Sitemap hint -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 
-  <!-- Styles omitted for brevity -->
-</head>
-<body>
-  <header class="siteHeader">
-    <div class="container row">
-      <nav aria-label="Primary navigation">
-        <ul class="navList">
-          <li><a class="navLink" href="/books">Books</a></li>
-          <li><a class="navLink" href="/media">Media</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <style>
+      :root {
+        --bg: #0f1115;
+        --muted: #9aa0a6;
+        --text: #e7e9ec;
+        --accent: #7bd389;
+        --card: rgba(255,255,255,0.02);
+        --radius: 12px;
+        --maxWidth: 1100px;
+        --font: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      }
 
-  <main class="container" itemscope itemtype="https://schema.org/Person" aria-label="Main content for Jose-Maria Kimburi">
-    <!-- Hero gallery and name -->
-    <section class="heroGallery" aria-label="Gallery of images">
-      <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi at work" loading="eager" decoding="async">
-      <img src="/Assets/group.jpg" width="1200" height="250" alt="Group shot with collaborators" loading="eager" decoding="async">
-      <img src="/Assets/direct.jpg" width="1200" height="250" alt="Directing on location" loading="eager" decoding="async">
-    </section>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
 
-    <section class="heroName">
-      <h1 itemprop="name">Jose-Maria Kimburi</h1>
-      <p itemprop="jobTitle">Author & Filmmaker</p>
-    </section>
+      body {
+        font-family: var(--font);
+        background: linear-gradient(180deg,#07070a 0%,var(--bg) 100%);
+        color: var(--text);
+        line-height: 1.45;
+        font-size: 16px;
+      }
 
-    <div class="sr-only" aria-hidden="false">
-      Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi J, Kimburi, J Kimburi, J-MK, 18 Reflections, 18 Reflections: Divides, Epidemics and the Generation Caught in Between, BioVerse TV, JKimburi
-    </div>
+      .container {
+        max-width: var(--maxWidth);
+        margin: 0 auto;
+        padding: 1.25rem;
+      }
 
-    <section class="homeBubbles" aria-label="Quick links">
-      <div class="bubbleCard" onclick="location.href='/books'" role="link" tabindex="0" aria-label="Books — Explore books by Kimburi">
-        <h3>Books</h3>
-        <p>Explore the books Kimburi has authored as well his upcoming publications.</p>
+      header {
+        padding: 1rem 0;
+      }
+
+      nav ul {
+        display: flex;
+        gap: 1rem;
+        list-style: none;
+        justify-content: center;
+      }
+
+      .navLink {
+        color: var(--muted);
+        text-decoration: none;
+        padding: .4rem .6rem;
+        border-radius: 8px;
+        font-weight: 600;
+      }
+
+      .navLink:hover {
+        background: rgba(255,255,255,0.03);
+        color: #fff;
+      }
+
+      .heroGallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 1rem;
+        margin-top: 1.5rem;
+      }
+
+      /* ensure images are block-level and have a fixed height for stable layout */
+      .heroGallery img {
+        display: block;
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+        border-radius: var(--radius);
+      }
+
+      .heroName {
+        text-align: center;
+        margin-top: 2rem;
+      }
+
+      .heroName h1 {
+        font-family: 'Bitter', serif;
+        font-weight: 700;
+        font-size: 3rem;
+        margin-bottom: .25rem;
+      }
+
+      .heroName p {
+        font-family: 'Mrs Saint Delafield', cursive;
+        font-size: 3rem;
+        color: var(--accent);
+        margin: 0;
+      }
+
+      .homeBubbles {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        gap: 1rem;
+        margin-top: 2rem;
+      }
+
+      .bubbleCard {
+        background: var(--card);
+        border-radius: var(--radius);
+        padding: 1.25rem;
+        text-align: center;
+        transition: transform .2s, box-shadow .2s;
+        cursor: pointer;
+      }
+
+      .bubbleCard:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+      }
+
+      .bubbleCard h3 {
+        margin-bottom: .5rem;
+        font-size: 1.35rem;
+        color: var(--accent);
+      }
+
+      .bubbleCard p {
+        font-size: .95rem;
+        color: var(--muted);
+      }
+
+      .biography {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        margin-top: 3rem;
+        gap: 1rem;
+      }
+
+      .biographyText h2 {
+        font-family: 'Zeyada', cursive;
+        font-weight: normal;
+        font-size: 5.5rem;
+        color: #fff;
+        margin-bottom: 1rem;
+        text-align: center;
+      }
+
+      .biographyText p {
+        margin-bottom: .75rem;
+        color: #fff;
+        font-size: 1rem;
+      }
+
+      .updates {
+        margin-top: 2rem;
+        text-align: center;
+      }
+
+      .updatesText p {
+        margin-bottom: 1rem;
+        color: #fff;
+        font-size: 1rem;
+      }
+
+      .updatesText a {
+        color: var(--accent);
+        text-decoration: underline;
+      }
+
+      .updatesText a:hover,
+      .updatesText a:focus {
+        color: #fff;
+        text-decoration: none;
+      }
+
+      footer {
+        border-top: 1px solid rgba(255,255,255,0.03);
+        padding: 1.25rem 0;
+        margin-top: 2.5rem;
+        color: var(--muted);
+        font-size: .95rem;
+      }
+
+      footer div {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-top: 1.5rem;
+      }
+
+      footer a {
+        color: var(--accent);
+        text-decoration: underline;
+      }
+
+      .sr-only {
+        position: absolute !important;
+        width: 1px !important;
+        height: 1px !important;
+        padding: 0 !important;
+        margin: -1px !important;
+        overflow: hidden !important;
+        clip: rect(0 0 0 0) !important;
+        white-space: nowrap !important;
+        border: 0 !important;
+      }
+
+      @media (max-width: 880px) {
+        .heroGallery img {
+          height: 180px;
+        }
+
+        .biographyText h2 {
+          font-size: 4rem;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <header class="siteHeader">
+      <div class="container row">
+        <nav aria-label="Primary navigation">
+          <ul class="navList">
+            <li><a class="navLink" href="books.html">Books</a></li>
+            <li><a class="navLink" href="media.html">Media</a></li>
+          </ul>
+        </nav>
       </div>
-      <div class="bubbleCard" onclick="location.href='/media'" role="link" tabindex="0" aria-label="Media — Explore media by Kimburi">
-        <h3>Media</h3>
-        <p>Explore the documentaries, series and docuseries Kimburi has produced and directed as well as his upcoming projects.</p>
+    </header>
+
+    <main class="container" itemscope itemtype="https://schema.org/Person" aria-label="Main content for Jose-Maria Kimburi">
+      <section class="heroGallery" aria-label="Gallery of images">
+        <!-- using root-based src only (no srcset) so desktop won't attempt missing variants -->
+        <img src="/Assets/away.jpg" width="1200" height="250" alt="Jose-Maria Kimburi at work" loading="eager" decoding="async">
+        <img src="/Assets/group.jpg" width="1200" height="250" alt="Group shot with collaborators" loading="eager" decoding="async">
+        <img src="/Assets/direct.jpg" width="1200" height="250" alt="Directing on location" loading="eager" decoding="async">
+      </section>
+
+      <section class="heroName">
+        <h1 itemprop="name">Jose-Maria Kimburi</h1>
+        <p itemprop="jobTitle">Author & Filmmaker</p>
+      </section>
+
+      <div class="sr-only" aria-hidden="false">
+        Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi J, Kimburi, J Kimburi, J-MK, 18 Reflections,
+        18 Reflections: Divides, Epidemics and the Generation Caught in Between, BioVerse TV, JKimburi
       </div>
-    </section>
 
-    <!-- Biography and updates sections omitted for brevity -->
+      <section class="homeBubbles" aria-label="Quick links">
+        <div class="bubbleCard" onclick="location.href='books.html'" role="link" tabindex="0" aria-label="Books — Explore books by Kimburi">
+          <h3>Books</h3>
+          <p>Explore the books Kimburi has authored as well his upcoming publications.</p>
+        </div>
 
-    <footer>
-      <div>
-        <p>© 2025 Jose-Maria Kimburi. All rights reserved.</p>
-        <p>For all general enquiries, email <a href="mailto:info@j-mk.com">info@j-mk.com</a></p>
-      </div>
-    </footer>
-  </main>
+        <div class="bubbleCard" onclick="location.href='media.html'" role="link" tabindex="0" aria-label="Media — Explore media by Kimburi">
+          <h3>Media</h3>
+          <p>Explore the documentaries, series and docuseries Kimburi has produced and directed as well as his upcoming projects.</p>
+        </div>
+      </section>
 
-  <!-- JSON-LD and rest omitted for brevity -->
-</body>
+      <section class="biography" aria-label="Biography">
+        <div class="biographyText">
+          <h2 itemprop="alternateName">J.K</h2>
+
+          <p itemprop="description">
+            Jose-Maria Kimburi is an 18-year-old author & filmmaker based in the UK. His work explores both human and
+            physical change through geography, with creative projects centred around people-place relationships.
+          </p>
+
+          <p>
+            <i>
+              18 Reflections: Divides, Epidemics and the Generation Caught in Between is his debut book, written to
+              articulate the complex realities his generation faces as they grow up amid social, environmental,
+              economic and health challenges.
+            </i>
+          </p>
+
+          <p>
+            <i>
+              BioVerse TV: Unplugging from Social Media is his debut documentary, encouraging people to step back from
+              the constant busyness of digital life and reconnect with the natural world. The film highlights the
+              mental health benefits of spending time in nature while showcasing its beauty and biodiversity. By weaving
+              together personal experiences, expert interviews and practical advice, BioVerse TV presents a refreshing
+              and accessible way to rethink our relationship with both technology and the environment.
+            </i>
+          </p>
+
+          <section class="updates" aria-label="Updates">
+            <div class="updatesText">
+              <p>Both his debut book and debut documentary will be released in the coming months.</p>
+
+              <p>
+                Follow his Instagram
+                (<a href="https://instagram.com/JKimburi" target="_blank" rel="noopener noreferrer" aria-label="Follow JKimburi on Instagram">@JKimburi</a>)
+                for more information and updates.
+              </p>
+
+              <p>
+                <a href="mailto:info@j-mk.com">info@j-mk.com</a> - General Enquiries<br>
+                <a href="mailto:books@j-mk.com">books@j-mk.com</a> - Book Enquiries<br>
+                <a href="mailto:media@j-mk.com">media@j-mk.com</a> - Media Enquiries
+              </p>
+            </div>
+          </section>
+        </div>
+      </section>
+
+      <footer>
+        <div>
+          <p>© 2025 Jose-Maria Kimburi. All rights reserved.</p>
+          <p>For all general enquiries, email <a href="mailto:info@j-mk.com">info@j-mk.com</a></p>
+        </div>
+      </footer>
+    </main>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Person",
+            "@id": "https://j-mk.com/#person",
+            "name": "Jose-Maria Kimburi",
+            "alternateName": ["Jose-Maria","Jose Kimburi","Kimburi J","Kimburi","J Kimburi","J-MK","JKimburi","J-Mk"],
+            "jobTitle": "Author & Filmmaker",
+            "url": "https://j-mk.com/",
+            "image": "https://j-mk.com/Assets/away.jpg",
+            "sameAs": ["https://www.instagram.com/JKimburi"],
+            "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Author of 18 Reflections and executive producer & director of BioVerse TV."
+          },
+          {
+            "@type": "WebSite",
+            "@id": "https://j-mk.com/#website",
+            "url": "https://j-mk.com/",
+            "name": "Jose-Maria Kimburi",
+            "potentialAction": {
+              "@type": "SearchAction",
+              "target": "https://j-mk.com/?s={search_term_string}",
+              "query-input": "required name=search_term_string"
+            }
+          }
+        ]
+      }
+    </script>
+  </body>
 </html>
