--- a/index.html
+++ b/index.html
@@ -150,11 +150,10 @@
       }
 
       .heroName p {
-        font-family: 'Mrs Saint Delafield', cursive;
+        font-family: 'Zeyada', cursive;
         font-size: 3rem;
         color: var(--accent);
         margin: 0;
-      }
 
       .homeBubbles {
         display: grid;
@@ -406,6 +405,7 @@
     </script>
   </body>
 </html>
+
 
 
 
