--- a/index.html
+++ b/index.html
@@ -332,8 +332,9 @@
           <h2 itemprop="alternateName">J.K</h2>
 <br> 
           <p itemprop="description">
-            Jose-Maria Kimburi is an 18-year-old author & filmmaker based in the UK. His work explores both human and
-            physical change through geography, with creative projects centred around people-place relationships.
+            Jose-Maria Kimburi is an 18-year-old author, film producer & director based in the UK. 
+            His work explores both human and physical change through geography, with creative projects centred around people-place relationships.
+
           </p>
 
           <p>
@@ -412,6 +413,7 @@
     </script>
   </body>
 </html>
+
 
 
 
