--- a/index.html
+++ b/index.html
@@ -332,9 +332,8 @@
           <h2 itemprop="alternateName">J.K</h2>
 <br> 
           <p itemprop="description">
-            Jose-Maria Kimburi is an 18-year-old author, film producer & director based in the UK. 
+            Jose-Maria Kimburi is an 18-year-old author & filmmaker (producer & director) based in the UK. 
             His work explores both human and physical change through geography, with creative projects centred around people-place relationships.
-
           </p>
 
           <p>
@@ -413,6 +412,7 @@
     </script>
   </body>
 </html>
+
 
 
 
