--- a/books.html
+++ b/books.html
@@ -298,7 +298,7 @@
 
             <div class="actions" role="group" aria-label="Purchase links for 18 Reflections">
               <a href="https://www.amazon.co.uk/stores/Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Amazon">Amazon</a>
-              <a href="https://books.google.co.uk/books?id=n3SMEQAAQBAJ&newbks=0&hl=en&source=newbks_fb&redir_esc=y" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Google Play">Google Play Preview</a>
+              <a href="https://www.google.co.uk/search?sa=X&sca_esv=04a013b6530774b2&hl=en&q=Jose-Maria+Kimburi&stick=H4sIAAAAAAAAAONgVuLVT9c3NKzMzknLM83OecRowS3w8sc9YSn9SWtOXmPU5OIKzsgvd80rySypFJLmYoOyBKX4uVB18ixiFfLKL07V9U0sykxU8M7MTSotygQAtM1ZzGEAAAA&ved=2ahUKEwiHo6i2oaWQAxUqW0EAHSNAOUQQgYUCegQIJhAC&biw=1422&bih=702&dpr=1.35" target="_blank" rel="noopener noreferrer" class="btn btnPrimary" aria-label="Buy 18 Reflections on Google Play">Google Play Preview</a>
             </div>
 
             <div class="sr-only" aria-hidden="false">
@@ -353,6 +353,7 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </body>
 </html>
+
 
 
 
